<resources>
    <string name="app_name">Mument_Android</string>

    <!-- my page view -->
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_profile">프로필</string>
    <string name="my_page_setting">설정</string>
    <string name="my_page_alarm_setting">알림 설정</string>
    <string name="my_page_block_user_management">차단 유저 관리</string>
    <string name="my_page_service">서비스</string>
    <string name="my_page_notice">공지사항</string>
    <string name="my_page_FAQ">자주 묻는 질문</string>
    <string name="my_page_inquiry">문의 메일 보내기</string>
    <string name="my_page_info">정보</string>
    <string name="my_page_app_info">앱 정보</string>
    <string name="my_page_introduce_mument">뮤멘트 소개</string>
    <string name="my_page_open_source">오픈소스 라이선스</string>

    <string name="my_page_version_info">현재버전 v%1$d / 최신버전 v%2$d</string>
    <string name="my_page_log_out"><u>로그아웃</u></string>
    <string name="my_page_unregister"><u>회원탈퇴</u></string>

    <!-- profile setting view-->
    <string name="profile_setting_title">프로필 설정</string>
    <string name="profile_setting_finish">완료</string>
    <string name="profile_setting_hint">닉네임을 입력해주세요. (필수)</string>
    <string name="profile_setting_id_condition">특수문자 제외 2–15자</string>
    <string name="profile_setting_nickname_num">%d/15</string>


    <!-- alarm setting view -->
    <string name="alarm">알림</string>
    <string name="alarm_content">누군가 내 뮤멘트에 좋아요했을 때, 중요한 공지사항,\n마케팅 이벤트, 계정 상태에 대한 알림을 받을 수 있어요</string>

    <!-- block user management view-->
    <string name="unblocking">해제</string>
    <string name="unblock_title">차단해제하시겠습니까?</string>
    <string name="unblock_body">해당 사용자의 뮤멘트를\n다시 볼 수 있습니다.</string>
    <string name="unblock_empty">차단한 유저가 없어요.</string>

    <!-- unregister view-->
    <string name="unregister_title">회원 탈퇴</string>
    <string name="unregister_really_gone">정말 떠나시는 건가요?</string>
    <string name="unregister_content">지금 당장 뮤멘트를 떠나시면 곡에 담긴 추억이 모두 사라지게 돼요. %s님이 좋아하신 뮤멘트들도 더이상 모아볼 수 없게됩니다.</string>
    <string name="unregister_what_reason">탈퇴하시려는 이유가 궁금해요.</string>
    <string name="unregister_choose_reason">이유 선택</string>
    <string name="unregister_reason_first">컨텐츠가 부족해요</string>
    <string name="unregister_reason_second">원하는 곡이 없어요</string>
    <string name="unregister_reason_third">뮤멘트 기록 방식이 불편해요</string>
    <string name="unregister_reason_fourth">알람이 너무 자주와요</string>
    <string name="unregister_reason_fifth">앱 장애가 많아요</string>
    <string name="unregister_reason_sixth">기타</string>
    <string name="unregister_hint">계정을 삭제하는 이유를 알려주세요.</string>
    <string name="unregister_reason_num">/100</string>
    <string name="unregister_agree">안내사항을 모두 확인했으며, 탈퇴를 신청합니다.</string>
    <string name="unregister_finish">탈퇴하기</string>
    <string name="unregister_loading_id">회원</string>

    <!-- logout -->
    <string name="logout_header">로그아웃하시겠어요?</string>



</resources>