<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPageActivity">

    <TextView
        android:id="@+id/tv_my_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/my_page_title"
        android:textAppearance="@style/TextView.Mument_H2_B18.TextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_my_page_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_title"
        tools:background="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_my_page_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="49dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/my_page_profile"
        android:textColor="@color/mument_color_gray2"
        android:textSize="13dp"
        app:layout_constraintStart_toEndOf="@+id/iv_my_page_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_title" />

    <TextView
        android:id="@+id/tv_my_page_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/notosans_medium"
        tools:text="blueingreen"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_profile" />

    <View
        android:id="@+id/view_my_page_line_01"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="33dp"
        android:background="@color/mument_color_gray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_user_name" />

    <TextView
        android:id="@+id/tv_my_page_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/my_page_setting"
        android:textColor="@color/mument_color_gray2"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/view_my_page_line_01"
        app:layout_constraintTop_toBottomOf="@+id/view_my_page_line_01" />

    <TextView
        android:id="@+id/tv_my_page_alarm_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_alarm_setting"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_setting" />

    <TextView
        android:id="@+id/tv_my_page_block_user_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_block_user_management"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_alarm_setting" />

    <View
        android:id="@+id/view_my_page_line_02"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:background="@color/mument_color_gray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_block_user_management" />

    <TextView
        android:id="@+id/tv_my_page_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/my_page_service"
        android:textColor="@color/mument_color_gray2"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/view_my_page_line_02"
        app:layout_constraintTop_toBottomOf="@+id/view_my_page_line_02" />

    <TextView
        android:id="@+id/tv_my_page_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_notice"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_service" />

    <TextView
        android:id="@+id/tv_my_page_FAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_FAQ"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_notice" />

    <TextView
        android:id="@+id/tv_my_page_inquiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_inquiry"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_service"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_FAQ" />

    <View
        android:id="@+id/view_my_page_line_03"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:background="@color/mument_color_gray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_inquiry" />

    <TextView
        android:id="@+id/tv_my_page_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/my_page_info"
        android:textColor="@color/mument_color_gray2"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/view_my_page_line_03"
        app:layout_constraintTop_toBottomOf="@+id/view_my_page_line_03" />

    <TextView
        android:id="@+id/tv_my_page_TOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_TOS"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_info" />

    <TextView
        android:id="@+id/tv_my_page_open_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_open_source"
        android:textColor="@color/mument_color_black1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/tv_my_page_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_TOS" />

    <TextView
        android:id="@+id/tv_my_page_version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:fontFamily="@font/notosans_medium"
        android:text="@string/my_page_version_info"
        android:textColor="@color/mument_color_gray1"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_my_page_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/my_page_log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_my_page_withdrawal"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_page_version_info"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/tv_my_page_withdrawal"
        android:layout_width="61dp"
        android:layout_height="19dp"
        android:layout_marginTop="13dp"
        android:text="@string/my_page_withdrawal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_my_page_logout"
        app:layout_constraintTop_toBottomOf="@id/tv_my_page_version_info" />


</androidx.constraintlayout.widget.ConstraintLayout>