<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myPageViewModel"
            type="com.mument_android.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mument_color_white"
        tools:context=".fragment.ProfileSettingFragment">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_profile_setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/mument_icon_back"
            android:onClick="isBackBtnClick"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_setting" />

        <TextView
            android:id="@+id/tv_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/profile_setting_title"
            android:textAppearance="@style/TextView.Mument_H2_B18.TextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/profile_setting_finish"
            android:textColor="@color/mument_color_gray2"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_profile_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_setting" />

        <ImageView
            android:id="@+id/iv_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="93dp"
            android:background="@drawable/mument_profile_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_setting" />

        <EditText
            android:id="@+id/et_profile_setting_nickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/rectangle_fill_gray4_11dp"
            android:fontFamily="@font/notosans_medium"
            android:hint="@string/profile_setting_hint"
            android:paddingHorizontal="17dp"
            android:text="@={myPageViewModel.userNickNameContent}"
            android:textColorHint="@color/mument_color_gray2"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_setting" />

        <TextView
            android:id="@+id/tv_profile_setting_nickname_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/notosans_medium"
            android:textColor="@color/mument_color_gray2"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="@+id/et_profile_setting_nickname"
            app:layout_constraintTop_toBottomOf="@+id/et_profile_setting_nickname"
            tools:text="@string/profile_setting_id_condition" />

        <TextView
            android:id="@+id/tv_profile_setting_nickname_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/notosans_medium"
            android:text="@{@string/profile_setting_nickname_num(myPageViewModel.userNickNameContent.length)}"
            android:textColor="@color/mument_color_gray2"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/et_profile_setting_nickname"
            app:layout_constraintTop_toBottomOf="@+id/et_profile_setting_nickname"
            tools:text="@string/profile_setting_nickname_num" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>